WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178021
Continuation map should not hold a raw pointer
https://bugs.webkit.org/show_bug.cgi?id=178021
Summary
Continuation map should not hold a raw pointer
alan
Reported
2017-10-06 12:12:51 PDT
This hashmap has a raw renderer pointer to a "sibling" renderer.
Attachments
Patch
(2.43 KB, patch)
2017-10-06 12:21 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(2.42 KB, patch)
2017-10-06 12:21 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-10-06 12:14:34 PDT
<
rdar://problem/34861590
>
alan
Comment 2
2017-10-06 12:21:03 PDT
Created
attachment 323035
[details]
Patch
alan
Comment 3
2017-10-06 12:21:37 PDT
Created
attachment 323036
[details]
Patch
WebKit Commit Bot
Comment 4
2017-10-06 15:13:17 PDT
Comment on
attachment 323036
[details]
Patch Clearing flags on attachment: 323036 Committed
r223003
: <
http://trac.webkit.org/changeset/223003
>
WebKit Commit Bot
Comment 5
2017-10-06 15:13:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug