Continuation map should not hold a raw pointer https://bugs.webkit.org/show_bug.cgi?id=178021 <rdar://problem/34861590>

Reviewed by Simon Fraser.

This patch ensures proper lifetime management for renderers stored in the Continuation map
(currently they rely on the correctness of addChild/takeChild methods).

Covered by existing tests.

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::continuation const):
(WebCore::RenderBoxModelObject::setContinuation):


Canonical link: https://commits.webkit.org/194274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223003 268f45cc-cd09-0410-ab3c-d52691b4dbfc