Source/WebCore/rendering/RenderBoxModelObject.cpp
@@ -77,7 +77,7 @@ using namespace HTMLNames;
 // an anonymous block (that houses other blocks) or it will be an inline flow.
 // <b><i><p>Hello</p></i></b>. In this example the <i> will have a block as
 // its continuation but the <b> will just have an inline as its continuation.
-typedef HashMap<const RenderBoxModelObject*, RenderBoxModelObject*> ContinuationMap;
+typedef HashMap<const RenderBoxModelObject*, WeakPtr<RenderBoxModelObject>> ContinuationMap;
 static ContinuationMap& continuationMap()
 {
     static NeverDestroyed<ContinuationMap> map;
@@ -2449,13 +2449,13 @@ RenderBoxModelObject* RenderBoxModelObject::continuation() const
 {
     if (!hasContinuation())
         return nullptr;
-    return continuationMap().get(this);
+    return continuationMap().get(this).get();
 }
 
 void RenderBoxModelObject::setContinuation(RenderBoxModelObject* continuation)
 {
     if (continuation)
-        continuationMap().set(this, continuation);
+        continuationMap().set(this, makeWeakPtr(continuation));
     else if (hasContinuation())
         continuationMap().remove(this);
     setHasContinuation(!!continuation);
